# simplaix

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  Makefile  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts
ai/: index.ts  models.ts  prompts.ts
app/: globals.css  layout.tsx
app/(auth)/: actions.ts  auth.config.ts
app/(chat)/: actions.ts  layout.tsx  page.tsx
blocks/code/: client.tsx
blocks/email/: client.tsx  server.ts
blocks/image/: client.tsx
blocks/sheet/: client.tsx
blocks/text/: client.tsx
components/base/: app-sidebar.tsx  block-actions.tsx  block-close-button.tsx  block.tsx  chat-header.tsx  chat.tsx  code-block.tsx  console.tsx  data-stream-handler.tsx  document-preview.tsx  icons.tsx  message-actions.tsx  message-editor.tsx  message.tsx  messages.tsx  middle-section.tsx  multimodal-input.tsx  overview.tsx  sidebar-history.tsx  sidebar-toggle.tsx  submit-button.tsx  suggested-actions.tsx  suggestion.tsx  ui-container.tsx  version-footer.tsx  weather.tsx
db/: queries.ts
hooks/: use-block.ts  use-chat-visibility.ts
lib/: utils.ts
lib/ai/: models.ts  (+1 more)
toolbox/: index.ts  tool_config.json
toolbox/tools/local/email/email-server/: .flake8  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
toolbox/tools/local/email/email-server/models/: draft.py  email.py  email_input.py
toolbox/tools/local/email/email-server/tools/: account.py  attachment.py  draft.py  reply.py  search.py  send.py
toolbox/tools/local/email/email-server/utils/: __init__.py  utils.py
types/: convert-zod-to-json.js  ticket.ts
utils/: gmail.ts
(+74 files in other folders)
